--- a/wwwroot/styles/helpers/_shadowbox.scss
+++ b/wwwroot/styles/helpers/_shadowbox.scss
@@ -13,7 +13,7 @@
     position: fixed;
     top: 25%;
     left: 50%;
-    max-width: 500px;
+    max-width: 700px;
     width: 50%;
     max-height: 600px;
     margin: 0 auto;
@@ -46,4 +46,7 @@
             overflow-x: hidden;
         }
     }
+}
+.shadow-bubble{
+    padding: 20px 20px 20px 20px;
 }
