--- a/wwwroot/styles/modules/_colors.scss
+++ b/wwwroot/styles/modules/_colors.scss
@@ -19,9 +19,9 @@ $t-stone: #3E423A;
 $t-opal: #6C6E58;
 $t-rain: #A4CFBE;
 $b-blue: rgba(5, 28, 55, 1);
-$b-blue-8: rgba(5, 28, 55, 0.8);
+$b-blue-8: rgba(5, 28, 55, 0.9);
 $t-green: #657a64;
-
+$t-l-green: #7d9e7c;
 
 .green-bg{
     background-color: $green;
