--- a/wwwroot/styles/helpers/_menu.scss
+++ b/wwwroot/styles/helpers/_menu.scss
@@ -44,6 +44,13 @@ nav.menu{
             &:hover{
                 background-color: #999 0.8;
                 transition: background-color 0.5s ease;
+                // color: $black;
+                text-shadow: 0px 1px 1px #888;
+                transition: text-shadow 0.5s ease;
+            }
+            &:active{
+                transition: background-color 0.2s ease;
+                background-color: $t-rain;
             }
         }
         li:last-of-type{
