stuff and stuff

--- a/wwwroot/styles/base.scss
+++ b/wwwroot/styles/base.scss
@@ -295,6 +295,9 @@ body{
                         text-align: center;
                     }
                 }
+                .man-green{
+                    color: $t-l-green;
+                }
                 .player-card{
                     // padding: 10px 0 0 0;
                     .check{
