fixed hover game rules close X

--- a/Views/Cards/Main.cshtml
+++ b/Views/Cards/Main.cshtml
@@ -168,7 +168,6 @@
 <div class="shadowbox" id="menu_rules_shadow_box">
 </div>
 <div class="shadow-content-container game-rules" id="menu_rules">
-    <button class="button" id="close_menu_rules">X</button>
     <div class="inner-shadow">
         <div class="row">
             <div class="col-12">
@@ -180,7 +179,7 @@
                                     <h2>Objective:</h2>
                                 </div>
                                 <div class="col-1">
-                                    <button class="button btn-x" id="Close_Rules">X</button>
+                                    <button class="button btn-x" id="close_menu_rules">X</button>
                                 </div>
                             </div>
                             <p>The goal is to obtain a suited-hand that totals 31 points, or to have a hand of higher value than all other players at the showdown.</p>
