--- a/wwwroot/styles/helpers/_sidebar.scss
+++ b/wwwroot/styles/helpers/_sidebar.scss
@@ -23,7 +23,7 @@
             }
         }
         h5.deck-label{
-            margin: 30px 0 10px 0;
+            margin: 10px 0;
         }
         .discard-bg{
             position: absolute;
