Added game size message

--- a/Views/Cards/PlayerSelect.cshtml
+++ b/Views/Cards/PlayerSelect.cshtml
@@ -23,6 +23,7 @@
                 <form class="" action="players" method="post">
                     <div id="PlayerForm">
                         <h2 class="tac">Create your players!</h2>
+                        <p class="sm-fz tac">For 2 - 6 players.</p>
                         <p class="sm-fz tac">Leave field empty for computer players.</p>
                         <div class="form-group" id="player1">
                             <p>Player 1 Name:</p>
